--- a/idex.html
+++ b/idex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUIZ APP</title>
-    <link rel="stylesheet" href="styleai.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="app">
